we make the box stuck with the player
if we press D

--- a/King of Boxes/Assembly-CSharp.csproj
+++ b/King of Boxes/Assembly-CSharp.csproj
@@ -55,6 +55,7 @@
   <ItemGroup>
     <Compile Include="Assets\PlayerMovement.cs" />
     <Compile Include="Assets\CameraFollow.cs" />
+    <Compile Include="Assets\PlayerInteract.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
